# StreamVault

./: .env.example  .gitignore  AI_PLAN.md  GETTING_STARTED.md  Makefile  README.md  TOOLS.md  Tiltfile  atlantis.yaml  docker-compose.override.yml  docker-compose.yml  lighthouserc.js  skaffold.yaml
analytics/: README.md
api-management/: README.md
api-testing/: README.md
backstage/: README.md  app-config.yaml  catalog-info.yaml  plugins.yaml  tech-radar.json
chaos/: README.md
ci/: README.md
data-lineage/: README.md
data-quality/: README.md
databases/: README.md
docs/: README.md
events/: README.md  ad-tech.ad.clicked.avsc  ad-tech.ad.requested.avsc  ad-tech.ad.served.avsc  ad-tech.ssai.signal.avsc  catalogue.title.tagged.avsc  content-ops.captions.generated.avsc  content-ops.dub.generated.avsc  content-ops.thumbnail.selected.avsc  discovery.search.performed.avsc  discovery.voice.query.received.avsc  encoding.asset.ingested.avsc  encoding.asset.published.avsc  encoding.ladder.built.avsc  growth.churn.predicted.avsc  growth.subscriber.churned.avsc  growth.subscriber.signed-up.avsc  moderation.appeal.opened.avsc  moderation.decision.upheld.avsc  moderation.ugc.flagged.avsc  recommendation.click.captured.avsc  recommendation.row.served.avsc  recommendation.session.started.avsc  (+1 more)
gitops/: README.md
src/media/audio-service/: CMakeLists.txt  Dockerfile  Makefile  README.md
src/media/audio-service/src/: main.cpp
src/media/transcoding-service/: .env.example  CMakeLists.txt  Dockerfile  Makefile  README.md
src/media/transcoding-service/src/: main.cpp
(+1775 files in other folders)
